Prevent scrollbars

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     background-color: black;
 	margin: 0px 0px;
 	padding: 0px 0px;
+	width: 100%;
+	height: 100%;
+    position: fixed; 
+    overflow: hidden;
 }
 #container {
 	margin: 0px auto;
